<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">Email</string>
    <string name="email_hint">yourname@example.com</string>
    <string name="loginbutton_text">Login</string>
    <string name="or_text">Or</string>
    <string name="registerbutton_text">Register</string>
    <string name="password_text">Password</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="log_out">Log Out</string>
    <string name="to_your_shoezie_store">To your Shoezie Store</string>
    <string name="shoe_company">Shoe Company</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_shoes">Add Shoes</string>
    <string name="assume_there_s_some_text_here">Assume there\'s some text here</string>
    <string name="onboarding2">This is a second onboarding screen that has absolutely nothing to do and nothing to show</string>
    <string name="instructions">Instructions</string>
    <string name="instruction1">1. Once you click on Let\'s Start it throws you to the Shoes List screen</string>
    <string name="instruction2">2. Click on the round shaped button to add info for a new shoe</string>
    <string name="instruction3">3. Clicking Save adds your data, while choosing Cancel will omit any info added and navigate back to the Shoes List screen</string>
    <string name="instruction4">4. You\'ll be able to log out of your non existent account only through one screen, Shoes List</string>
    <string name="instruction5">5. It is possible to leave the edit fields empty, we\'ve got your back</string>
    <string name="instruction6">6. It\'s worth noting that Register always goes through the welcoming screens while Login skips them</string>
</resources>