<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OnboardingFragment2">

<!--    Constraint layout was used to simplify the positioning and alignment of the child elements-->
<!--    and those are the vertical LinearLayout for the instructions and the Button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">

        <LinearLayout
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/subonboarding2_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/onboarding2Button"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/instructionsText"
                style="@style/onboarding_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/instructions"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/instrcution1Text"
                style="@style/instructions_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction1" />

            <TextView
                android:id="@+id/instrcution2Text"
                style="@style/instructions_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction2" />

            <TextView
                android:id="@+id/instrcution3Text"
                style="@style/instructions_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction3" />

            <TextView
                android:id="@+id/instrcutionsin4Text"
                style="@style/instructions_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction4" />

            <TextView
                android:id="@+id/instrcution5Text"
                style="@style/instructions_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction5" />

            <TextView
                android:id="@+id/instrcution6Text"
                style="@style/instructions_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction6" />

        </LinearLayout>

        <Button
            android:id="@+id/onboarding2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:background="@drawable/button_background"
            android:padding="20dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/let_s_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
